--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,5 @@ jobs:
       # Runs a single command using the runners shell
       - name: Get Ready To Push
         run:
-          pip list
+          pip install git-remote-codecommit
+          git push $CODECOMMIT_REPO_URL main
