fixed typo in workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,6 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Get Ready To Push
-        run:
+        run: |-
           pip install git-remote-codecommit
           git push $CODECOMMIT_REPO_URL main
