--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,5 +31,5 @@ jobs:
           CODECOMMIT_REPO_URL: ${{ secrets.CODECOMMIT_REPO_URL }}
         run: |-
           pip install git-remote-codecommit
-          git remote add codecommit $CODECOMMIT_REPO_URL
+          git remote add codecommit codecommit::us-east-1://aws-glory-mirrored-from-github
           git push codecommit main
