--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,14 +19,13 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
+      - working-directory: app
       - name: Setup Node JS
         uses: actions/setup-node@v2.2.0
         with:
           node-version: 14.16.0
       - name: Install Dependencies
         run: |-
-          cd app
           npm install -g @angular/cli
           yarn install
       - name: Build Project
@@ -38,6 +37,7 @@ jobs:
           yarn build
   release:
     runs-on: ubuntu-latest
+    needs: [build]
     steps:
       - name: Download build artifacts
         run: ls -ltra
