--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,21 +14,21 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - working-directory: app
       - name: Setup Node JS
         uses: actions/setup-node@v2.2.0
         with:
           node-version: 14.16.0
       - name: Install Dependencies
+      - working-directory: app
         run: |-
           npm install -g @angular/cli
           yarn install
       - name: Build Project
+      - working-directory: app
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
@@ -36,8 +36,9 @@ jobs:
         run: |-
           yarn build
   release:
+    name: Release Files To S3
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: build
     steps:
       - name: Download build artifacts
         run: ls -ltra
