--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,4 +41,9 @@ jobs:
     needs: build
     steps:
       - name: Download build artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: *
+          path: app/dist
+      - name: Release
         run: ls -ltra
