fixed file name

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Download build artifacts
         uses: actions/download-artifact@v2
         with:
-          name: *
+          name: dist
           path: app/dist
       - name: Release
         run: ls -ltra
