--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           name: dist
           path: |
-            dist
+            app/dist
   release:
     name: Release Files To S3
     runs-on: ubuntu-latest
