SHOW ME THE MONEYgit add .

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,7 @@ jobs:
           aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
       - name: Release
         run: |-
-          cd app/dist
+          cd app
+          ls -ltra
           aws s3 sync . s3://aws-glory
 
