finished initial deployment pipeline

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: Upload-To-Codecommit
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main, ci-cd ]
+    branches: [ main ]
 
   workflow_dispatch:
 
