--- a/cdk/package.json
+++ b/cdk/package.json
@@ -27,6 +27,8 @@
     "@aws-cdk/aws-codebuild": "1.117.0",
     "@aws-cdk/aws-codedeploy": "1.117.0",
     "@aws-cdk/aws-codepipeline": "1.117.0",
+    "@aws-cdk/aws-dynamodb": "1.117.0",
+    "@aws-sdk/client-dynamodb": "^3.26.0",
     "source-map-support": "^0.5.16"
   }
 }
