--- a/cdk/lib/custom_resources/populate-dynamodb-table/package.json
+++ b/cdk/lib/custom_resources/populate-dynamodb-table/package.json
@@ -4,7 +4,7 @@
   "description": "helper",
   "main": "populate-dynamodb-tables.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js"
   },
   "author": "Hasan",
   "license": "ISC",
