--- a/cdk/lib/custom_resources/participants-services/package.json
+++ b/cdk/lib/custom_resources/participants-services/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "user-pool-service.js",
   "scripts": {
-    "test": "node test.js"
+    "test": "tsc && node test.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-cognito-identity": "^3.26.0",
-    "@aws-sdk/client-cognito-identity-provider": "^3.26.0"
+    "@aws-sdk/client-dynamodb": "^3.26.0",
+    "aws-sdk": "^2.968.0"
   }
 }
