--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "crypto-js": "^4.1.1",
     "isomorphic-unfetch": "^3.1.0",
     "rxjs": "~6.6.0",
+    "schematics-scss-migrate": "^1.3.13",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
