--- a/cdk/lib/custom_resources/participants-services/package.json
+++ b/cdk/lib/custom_resources/participants-services/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.26.0",
-    "aws-sdk": "^2.968.0"
+    "aws-sdk": "^2.968.0",
+    "axios": "^0.21.3"
   }
 }
